[tool.poetry]
name = "shortener"
version = "0.1.0"
description = ""
authors = ["mrKazzila <mrkazzila@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

httpx = "^0.24.1"
fastapi = {extras = ["all"], version = "^0.102.0"}

gunicorn = "^20.1.0"
uvicorn = "^0.23.1"

sqlalchemy = "^2.0.19"
alembic = "^1.11.1"
asyncpg = "^0.28.0"
fastapi-cache2 = {extras = ["redis"], version = "^0.2.1"}
validators = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
isort = "^5.12.0"
coverage = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
